[project]
name = "Hello_service"
version = "1.0.0"
description = "Simple Hello service"
authors = [
    {name = "Michael Škrdlík",email = "xskrdlik@mendleu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "unicorn>=2.0.1.post1",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn main:app --reload"
test = "pytest"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
